2006-06-07  Sven Panne  <sven.panne@aedion.de>

	* Released Version 1.1.0, subversion tag is "freealut_1_1_0".

2006-05-22  Sven Panne  <sven.panne@aedion.de>

	* Prepared release candidate 1 for 1.1.0, tag is "freealut_1_1_0_RC1".

	* NEWS: Added news for 1.1.0.

2006-05-11  Sven Panne  <sven.panne@aedion.de>

	* README, admin/VisualStudio6/alut/alut.dsp,
	admin/VisualStudio6/hello_world/hello_world.dsp,
	admin/VisualStudio6/playfile/playfile.dsp,
	admin/VisualStudioDotNET/alut/alut.vcproj,
	admin/VisualStudioDotNET/hello_world/hello_world.vcproj,
	admin/VisualStudioDotNET/playfile/playfile.vcproj: Changed the paths to
	the headers and the library to conform to the default of the current
	OpenAL SDK installer from Creative.

	* src/alutWaveform.c(getWaveformFunction): To avoid warnings on VC6, add
	some redundant '&' operators.

	* include/AL/alut.h: Added some fragile logic to find the right path to
	the OpenAL headers.

2006-04-12  Sven Panne  <sven.panne@aedion.de>	

	* configure.ac: To guarantee version consistency, generate .spec
	file via configure.

	* admin/RPM/.cvsignore, admin/RPM/freealut.spec.in: Added.

	* admin/RPM/freealut.spec: Removed.

	* CMakeLists.txt, admin/VisualStudio6/alut/alut.dsp,
	admin/VisualStudioDotNET/alut/alut.vcproj, admin/autotools/.indent.pro,
	configure.ac, include/AL/alut.h, src/Makefile.am, src/alutBufferData.c,
	src/alutInternal.h, src/alutLoader.c, src/alutUtil.c,
	src/alutWaveform.c: Implemented alutLoadMemoryHelloWorld and
	alutLoadMemoryWaveform. Refactored things internally a bit, mainly by
	making an InputStream the central kind of sound data source. Introduced
	the OutputStream type for generating built-in sounds. Bumped the package
	version to 1.1.0 and the library version to 1:0:1 (i.e. a backwards
	compatible version, only with new features). Added --enable-efence
	configure option.

	* src/alutOutputStream.c: Added.

	* doc/alut.html: Added a few missing ALUT_ERROR_OUT_OF_MEMORY error