@@ -1,22 +1,27 @@
 #
 # spec file for package freealut (@PACKAGE_VERSION@)
 #
+# Copyright (c) 2006 SUSE LINUX Products GmbH, Nuernberg, Germany.
+# This file and all modifications and additions to the pristine
+# package are under the same license as the package itself.
+#
+# Please submit bugfixes or comments via http://bugs.opensuse.org/
+#
 
 # norootforbuild
-# neededforbuild SDL SDL-devel aalib aalib-devel alsa alsa-devel arts audiofile esound esound-devel glib2 glib2-devel libogg libogg-devel libstdc++-devel libvorbis libvorbis-devel openal openal-devel pkgconfig resmgr slang slang-devel smpeg smpeg-devel xorg-x11-devel xorg-x11-libs
+# usedforbuild    aaa_base acl attr bash bind-libs bind-utils bison bzip2 coreutils cpio cpp cracklib cvs cyrus-sasl db diffutils e2fsprogs file filesystem fillup findutils flex gawk gdbm-devel gettext-devel glibc glibc-devel glibc-locale gpm grep groff gzip info insserv klogd less libacl libattr libcom_err libgcc libnscd libstdc++ libxcrypt libzio m4 make man mktemp module-init-tools ncurses ncurses-devel net-tools netcfg openldap2-client openssl pam pam-modules patch permissions popt procinfo procps psmisc pwdutils rcs readline sed strace sysvinit tar tcpd texinfo timezone unzip util-linux vim zlib zlib-devel autoconf automake binutils gcc gdbm gettext libtool perl rpm openal openal-devel
 
-BuildRequires: aaa_base acl attr bash bind-utils bison bzip2 coreutils cpio cpp cracklib cvs cyrus-sasl db devs diffutils e2fsprogs file filesystem fillup findutils flex gawk gdbm-devel glibc glibc-devel glibc-locale gpm grep groff gzip info insserv klogd less libacl libattr libgcc libnscd libselinux libstdc++ libxcrypt libzio m4 make man mktemp module-init-tools ncurses ncurses-devel net-tools netcfg openldap2-client openssl pam pam-modules patch permissions popt procinfo procps psmisc pwdutils rcs readline sed strace syslogd sysvinit tar tcpd texinfo timezone unzip util-linux vim zlib zlib-devel autoconf automake binutils gcc gdbm gettext libtool perl rpm SDL SDL-devel aalib aalib-devel alsa alsa-devel arts audiofile esound esound-devel glib2 glib2-devel libogg libogg-devel libstdc++-devel libvorbis libvorbis-devel openal openal-devel resmgr slang slang-devel smpeg smpeg-devel xorg-x11-devel xorg-x11-libs dialog expat fontconfig fontconfig-devel freetype2 freetype2-devel gnome-filesystem jack liblcms libjpeg libmng libpng libsndfile libtiff pciutils pkgconfig qt3 aaa_skel ash bind-libs gpg libgcj logrotate openslp suse-build-key suse-release tcsh
-
-Name:         freealut
-License:      LGPL
-Group:        System/Libraries
-Autoreqprov:  on
-Version:      @PACKAGE_VERSION@
-Release:      1
-URL:          http://www.openal.org/
-Summary:      Open Audio Library Utility Toolkit
-Source:       freealut-%{version}.tar.gz
-BuildRoot:    %{_tmppath}/%{name}-%{version}-build
+Name:           freealut
+BuildRequires:  openal-devel
+License:        LGPL
+Group:          System/Libraries
+Autoreqprov:    on
+Version:        @PACKAGE_VERSION@
+Release:        1
+URL:            http://www.openal.org/
+Summary:        Open Audio Library Utility Toolkit
+Source:         freealut-%{version}.tar.bz2
+BuildRoot:      %{_tmppath}/%{name}-%{version}-build
 
 %description
 freealut is a highly portable Open Source implementation of ALUT, a
@@ -83,9 +88,9 @@ rm -rf $RPM_BUILD_ROOT
 
 %files devel
 %defattr(-,root,root)
+%{_prefix}/bin/freealut-config
 %doc %{_defaultdocdir}/%{name}/alut.html
 %doc %{_defaultdocdir}/%{name}/alut.css
-%{_prefix}/bin/freealut-config
 %{_includedir}/AL/alut.h
 %{_libdir}/libalut.a
 %{_libdir}/libalut.la
@@ -93,6 +98,8 @@ rm -rf $RPM_BUILD_ROOT
 %{_libdir}/pkgconfig/freealut.pc
 
 %changelog -n freealut
+* Tue May 30 2006 - sven.panne@aedion.de
+- Updates for SuSE 10.1
 * Wed Apr 12 2006 - sven.panne@aedion.de
 - Handle version via configure
 * Thu Dec 15 2005 - sven.panne@aedion.de
